--- a/manjaroI3/.config/i3/config
+++ b/manjaroI3/.config/i3/config
@@ -87,7 +87,7 @@ exec --no-startup-id clipit
 #exec --no-startup-id xautolock -time 10 -locker blurlock
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec --no-startup-id ~/.config/polybar/launch.sh
 exec --no-startup-id i3-msg 'workspace $ws1; exec terminal'
 #wallpaper
 exec --no-startup-id feh --randomize --bg-fill ~/Pictures/wallpaper/*
