--- a/ubuntu/.config/polybar/config
+++ b/ubuntu/.config/polybar/config
@@ -304,12 +304,12 @@ format-background = ${colors.background}
 
 
 [module/arrow1]
-; grey to Blue
+; beginning
 type = custom/text
 content = "%{T2} %{T-}"
 content-font = 2
 content-foreground = #8d62a9
-content-background = #292d3e
+content-background = ${colors.background}
 
 [module/arrow2]
 ; grey to Blue
@@ -329,7 +329,7 @@ content-background = #668bd7
 
 
 [module/arrow4]
-; grey to Blue
+; end
 type = custom/text
 content = "%{T2} %{T-}"
 content-font = 2
@@ -425,18 +425,6 @@ animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-foreground = #a3c725
 animation-charging-framerate = 750
-
-################################################################################
-
-[module/compton]
-;https://github.com/jaagr/polybar/wiki/User-contributed-modules#compton
-type = custom/script
-exec = ~/.config/polybar/scripts/compton.sh
-click-left = ~/.config/polybar/scripts/compton-toggle.sh
-interval = 5
-format-foreground = ${colors.foreground}
-format-background = ${colors.background}
-;format-underline = #00AF02
 
 ################################################################################
 
@@ -646,19 +634,6 @@ format-unmounted-foreground = ${colors.foreground}
 format-unmounted-background = ${colors.background}
 ;format-unmounted-underline = ${colors.alert}
 
-################################################################################
-
-[module/kernel]
-type = custom/script
-exec = uname -r
-tail = false
-interval = 1024
-
-format-foreground = ${colors.foreground}
-format-background = ${colors.background}
-format-prefix = "  "
-format-prefix-foreground = #0084FF
-format-underline = #4B5665
 
 ################################################################################
 
@@ -836,22 +811,6 @@ scroll-down = ~/.config/polybar/scripts/pavolume.sh --down
 format-foreground = #fefefe
 format-background = #8d62ad
 
-
-
-################################################################################
-
-[module/pub-ip]
-;https://linuxconfig.org/polybar-a-better-wm-panel-for-your-linux-system
-type = custom/script
-exec = ~/.config/polybar/scripts/pub-ip.sh
-interval = 100
-format-foreground = ${colors.foreground}
-format-background = ${colors.background}
-format-underline = #FFBB00
-label = %output%
-format-prefix = "  "
-format-prefix-foreground = #FFBB00
-
 ################################################################################
 
 [module/release]
@@ -876,22 +835,6 @@ content-background =  ${colors.background}
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 
-################################################################################
-
-[module/spotify1]
-;https://github.com/NicholasFeldman/dotfiles/blob/master/polybar/.config/polybar/spotify.sh
-type = custom/script
-exec = ~/.config/polybar/scripts/spotify1.sh
-interval = 1
-
-;format = <label>
-format-foreground = ${colors.foreground}
-format-background = ${colors.background}
-format-padding = 2
-format-underline = #0f0
-format-prefix = "  "
-format-prefix-foreground = #0f0
-label = %output:0:150%
 
 ################################################################################
 
@@ -1066,14 +1009,6 @@ ramp-signal-foreground = #7e52c6
 
 ################################################################################
 
-[module/workspaces-xmonad]
-type = custom/script
-exec = tail -F /tmp/.xmonad-workspace-log
-exec-if = [ -p /tmp/.xmonad-workspace-log ]
-tail = true
-
-################################################################################
-
 [module/xbacklight]
 ;https://github.com/jaagr/polybar/wiki/Module:-xbacklight
 type = internal/xbacklight
@@ -1119,15 +1054,6 @@ label-indicator-background = ${colors.background}
 label-indicator-underline = ${colors.foreground}
 
 
-################################################################################
-
-[module/xmenu]
-type = custom/script
-interval = 1200
-exec = echo "  "
-click-left = "sh /home/dt/xmenu/xmenu.sh"
-format-foreground = ${colors.foreground}
-format-background = ${colors.background}
 ################################################################################
 
 [module/xwindow]
